--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
-        android:name=".NuwaApplication"
+        android:name=".SimpleDemo.selfMadeObject.UserData"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,19 +18,28 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".SimpleDemo.RegisterActivity"
+            android:parentActivityName=".SimpleDemo.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".SimpleDemo.ShowUserDataActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:parentActivityName=".SimpleDemo.MainControlActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SimpleDemo.LabActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:parentActivityName=".SimpleDemo.MainControlActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SimpleDemo.ChallengeActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:parentActivityName=".SimpleDemo.MainControlActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SimpleDemo.MainControlActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".SimpleDemo.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:parentActivityName=".SimpleDemo.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SimpleDemo.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Main"
             android:theme="@style/AppTheme.NoActionBar">
